<resources>
    <string name="app_name">MentalHealthLumo</string>
    <string name="welcome">Hello there my strong people!</string>
    <string name="gotoMain"> Main Menu </string>
    <string name="toMenu">To Menu</string>
    <string name="sortGameNumber">Number Sort</string>
    <string name="guessHappy">Guess If I\'m Happy or Anxious?</string>
    <string name="areYouHappy">Are you Happy or Anxious?</string>
    <string name="plsEnter">Enter your image url</string>
    <string name="toImage">Happy Or Anxious</string>
    <string name="nil">nil</string>
    <string name="dragNDrop">Drag and Drop</string>
    <string name="accessEntry">Review Entries</string>
    <string name="breathingAssist">Breathing Assist</string>
    <string name="diary">New Entry</string>
    <string name="rss">Resources</string>
    <string name="about">About</string>

</resources>