<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestYourHappiness">

    <Button
        android:id="@+id/inputButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:text="@string/guessHappy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/areYouHappy"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inputUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:inputType="textUri"
        app:layout_constraintBottom_toTopOf="@+id/inputButton"
        app:layout_constraintStart_toStartOf="@+id/inputButton" />

    <TextView
        android:id="@+id/feelingOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/nil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feelingPercentOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nil"
        app:layout_constraintStart_toStartOf="@+id/feelingOne"
        app:layout_constraintTop_toBottomOf="@+id/feelingOne" />

    <TextView
        android:id="@+id/feelingTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nil"
        app:layout_constraintStart_toStartOf="@+id/feelingPercentOne"
        app:layout_constraintTop_toBottomOf="@+id/feelingPercentOne" />

    <TextView
        android:id="@+id/feelingPercentTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nil"
        app:layout_constraintStart_toStartOf="@+id/feelingTwo"
        app:layout_constraintTop_toBottomOf="@+id/feelingTwo" />

</android.support.constraint.ConstraintLayout>